testdata/baselines/reference/submodule/conformance/checkJsdocTypeTag1.errors.txt
0.js(20,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
0.js(24,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
0.js(28,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
0.js(40,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'props' must be of type 'object', but here has type 'Object'.


==== 0.js (4 errors) ====
    // @ts-check
    /** @type {String} */
    var S = "hello world";
    
    /** @type {number} */
    var n = 10;
    
    /** @type {*} */
    var anyT = 2;
    anyT = "hello";
    
    /** @type {?} */
    var anyT1 = 2;
    anyT1 = "hi";
    
    /** @type {Function} */
    const x = (a) => a + 1;
    x(1);
    
    /** @type {function} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
    const y = (a) => a + 1;
    y(1);
    
    /** @type {function (number)} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
    const x1 = (a) => a + 1;
    x1(0);
    
    /** @type {function (number): number} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
    const x2 = (a) => a + 1;
    x2(0);
    
    /**
     * @type {object}
     */
    var props = {};
    
    /**
     * @type {Object}
     */
    var props = {};
        ~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'props' must be of type 'object', but here has type 'Object'.
!!! related TS6203 0.js:35:5: 'props' was also declared here.
    